# RxInferExamples.jl

./: .cursorrules  .documenter-siteinfo.json  .gitignore  CNAME  LICENSE  Makefile  README.md  gmt.history  index.html  objects.inv  search_index.js  sitemap.xml
.github/workflows/: CI.yml
Advanced Examples/Active Inference Mountain car/: Active Inference Mountain car.ipynb
assets/: header.js
dev/: .documenter-siteinfo.json  index.html  objects.inv  search_index.js
docs/: Project.toml  make.jl
docs/src/: index.md  (+3 more)
drone/: Manifest.toml  Project.toml  drone.jl  drone_simulation.ipynb
examples/: Project.toml  make.jl
how_build_works/: index.html
how_to_contribute/: index.html
interactive/: README.md
notes/: InferAnt_011-1.md
research/manim/: README.md  manim.cfg  pyproject.toml
research/manim/manim_project/configs/: paths.py
research/manim/manim_project/scenes/: generic_dot_graph.py  mountain_car_graph.py  source_code_panel.py
research/manim/manim_project/utils/: graph_io.py
research/manim/output/manim_renders/videos/generic_dot_graph/1080p60/partial_movie_files/DotGraphScene/: partial_movie_file_list.txt
research/manim/output/manim_renders/videos/source_code_panel/1080p60/partial_movie_files/SourceCodePanel/: partial_movie_file_list.txt
research/manim/rxinfer_manim.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
research/manim/scripts/: render.sh  render_all_outputs.sh  setup_venv.sh  smoke_tests.sh
research/manim/tests/: test_graph_io.py  test_paths.py
support/: Support_README.md  notebooks_to_scripts.jl  setup.jl
(+1987 files in other folders)
