[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "rxinfer-manim"
version = "0.1.0"
description = "Manim scenes for RxInferExamples.jl visualizations"
authors = [{ name = "RxInferExamples" }]
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
  "manim>=0.18",
  "networkx>=3.2",
  "pydot>=1.4",
  "pytest>=7.0",
]

[tool.setuptools]
packages = ["manim_project"]

[tool.pytest.ini_options]
addopts = "-q"
pythonpath = ["manim_project"]
